# LightSync

./: .prettierignore  .prettierrc  CLAUDE.md  IFLOW.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.claude/agents/: react-rule.md  rust-rule.md  tauri-rule.md
.cursor/rules/: react-rule.mdc  rust-rule.mdc  tauri-rule.mdc
.iflow/agents/: react-rule.md  rust-rule.md  tauri-rule.md
.kiro/hooks/: backend-api-change-guard.kiro.hook  code-quality-analyzer.kiro.hook  i18n-text-check.kiro.hook
.kiro/steering/: backend.md  frontend.md  product.md  structure.md  tech.md
docs/: logging.md  password-storage.md  test-logging-implementation.md  testing-guide.md
docs/api/: webdav-api.md
docs/hooks/: useWebDavServers.md
docs/md/: SQLite使用必要性分析.md  Task1.2完成报告.md  Task1.2验收清单.md  Task1.3完成报告.md  Task1.3验收清单.md  Task1.4完成报告.md  Task1.4验收清单.md  icon-update-guide.md  (+19 more)
public/: security-center.html
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: logging_demo.rs  mock_server_demo.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_webdav_servers.sql
src-tauri/src/: config.rs  config_watcher.rs  constants.rs  database.rs  error.rs  lib.rs  main.rs  system.rs  test_utils.rs
src-tauri/src/commands/: mod.rs  webdav.rs
src-tauri/src/file_watcher/: README.md  mod.rs  types.rs
src-tauri/src/webdav/: client.rs  db.rs  e2e_tests.rs  keyring.rs  mod.rs
(+77 files in other folders)
